Fix background size on smaller screen dimensions

--- a/style.css
+++ b/style.css
@@ -86,6 +86,7 @@ hr {
 #masthead {
     background: url('https://2018.denver.wordcamp.org/files/2018/04/maxresdefault.jpg');
     background-size: 100%;
+	background-size: cover;
     min-height: 440px;
     padding-top: 20px;
     position: relative;
